added tasks TODO

--- a/TODO
+++ b/TODO
@@ -25,3 +25,8 @@ Push Events:
     * Skipped
 
 something
+
+
+TASKS:
+    1. add bot-commands(register, start, stop) to register 'group_id & topic_id', start and stop message sending.
+    2. action to sync all group users(update or create)
