--- a/TODO
+++ b/TODO
@@ -30,4 +30,4 @@ something
 TASKS:
     1. add bot-commands(register, start, stop) to register 'group_id & topic_id', start and stop message sending.
     2. action to sync all group users(update or create)
-    3.
+    3. smth
