fixed user telegram user mention

--- a/TODO
+++ b/TODO
@@ -26,11 +26,14 @@ Push Events:
 
 
 TASKS:
-    1. add bot-commands(register, start, stop) to register 'group_id & topic_id', start and stop message sending.
-    2. action to sync all group users(update or create)
-    3. merge request event(source, target branches)
-    4. event statuses
+    COMPLETED:
+        1. add bot-commands(register, start, stop) to register 'group_id & topic_id', start and stop message sending.
+        2. action to sync all group users(update or create)
+        3. merge request event(source, target branches)
+        4. event statuses
+        5. set merge request link
+        6. change sticker
+        7. to postgres
 
-    1. set merge request link
-    2. change sticker
-    3. to postgres
+    UNCOMPLETED:
+        1. change text of telegram message
